# FCFS-Simulator

./: README.md
FCFS_simulator/: CMakeLists.txt  main.cpp  process.cpp  process.h  scheduler.cpp  scheduler.h
